k8s_run/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-green
  labels:
    app: aceest-app
    env: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aceest-app
      env: green
  template:
    metadata:
      labels:
        app: aceest-app
        env: green
    spec:
      containers:
      - name: aceest-app
        image: naveen9871/aceest-app:latest
        imagePullPolicy: IfNotPresent        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
