k8s_run/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-deployment
  labels:
    app: aceest-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: aceest-app
  template:
    metadata:
      labels:
        app: aceest-app
    spec:
      containers:
      - name: aceest-app
        image: naveen9871/aceest-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
