k8s_run/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-app-service
spec:
  type: LoadBalancer
  selector:
    app: aceest-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
