k8s_run/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-app-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: aceest-gym.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aceest-app-service
            port:
              number: 80
